--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-users",
   "version": "0.1.0",
+  "homepage": "https://saverzus.github.io/react-users/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
